# AktienTicker

./: .env  graph.mmd  main.py  pyproject.toml
Agenten/: finanz-scrap.py
